--- a/frontend/src/app/components/file-input-picker/file-input-picker.component.html
+++ b/frontend/src/app/components/file-input-picker/file-input-picker.component.html
@@ -27,7 +27,7 @@
         <span class="font-semibold">Click to upload</span> or drag and drop
       </p>
       <p class="text-xs text-gray-500 dark:text-gray-400">
-        SVG, PNG, JPG or GIF
+        {{ infoMessage }}
       </p>
     </div>
     <input
