--- a/frontend/src/app/components/file-input-picker/file-input-picker.component.html
+++ b/frontend/src/app/components/file-input-picker/file-input-picker.component.html
@@ -24,7 +24,8 @@
         />
       </svg>
       <p class="mb-2 text-sm text-gray-500 dark:text-gray-400">
-        <span class="font-semibold">Click to upload</span> or drag and drop
+        <span class="font-semibold">Click to upload</span>
+        or drag and drop
       </p>
       <p class="text-xs text-gray-500 dark:text-gray-400">
         {{ infoMessage }}
@@ -34,6 +35,7 @@
       id="dropzone-file"
       type="file"
       class="hidden"
+      [accept]="allowedFileTypes"
       (change)="onImagePicked($event)"
     />
   </label>
