--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -5,16 +5,15 @@
         <a href="https://flowbite.com/" class="flex items-center">
           <!--<img src="https://flowbite.com/docs/images/logo.svg" class="h-8 me-3" alt="FlowBite Logo" />-->
           <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-white"
-            >ImageMaxxer</span
+            class="self-center text-2xl font-semibold whitespace-nowrap text-transparent bg-clip-text bg-gradient-to-r from-indigo-800 to-indigo-200"
           >
+            ImageMaxxer
+          </span>
         </a>
       </div>
       <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
         <div>
-          <h2 class="mb-6 text-sm font-semibold uppercase text-white">
-            Resources
-          </h2>
+          <h2 class="mb-6 text-sm font-semibold uppercase text-white">Resources</h2>
           <ul class="text-gray-400 font-medium">
             <li class="mb-4">
               <a href="" class="hover:underline">111</a>
@@ -39,11 +38,10 @@
     </div>
     <hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-      <span class="text-sm sm:text-center text-gray-400"
-        >© 2025
-        <a href="https://gensetter-it.ch/" class="hover:underline"
-          >Gensetter IT</a
-        >. All Rights Reserved.
+      <span class="text-sm sm:text-center text-gray-400">
+        © 2025
+        <a href="https://gensetter-it.ch/" class="hover:underline">Gensetter IT</a>
+        . All Rights Reserved.
       </span>
       <div class="flex mt-4 sm:justify-center sm:mt-0">
         <!--<a
