--- a/frontend/src/app/pages/edit-box/edit-box.component.html
+++ b/frontend/src/app/pages/edit-box/edit-box.component.html
@@ -1,1 +1,24 @@
-<p>edit-box works!</p>
+<section class="container mx-auto text-white">
+  <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
+    <div class="md:col-span-1">
+      <img
+        class="w-full object-cover rounded-lg select-none"
+        src="http://localhost:3000/api/v1/image/raw/7c4b8abf-f9e2-4ff7-b098-c75bc28f3eb3.jpg"
+      />
+    </div>
+
+    <div class="md:col-span-4 flex flex-col gap-4">
+      <h2 class="bg-gray-900 shadow-xl rounded p-4 text-white text-center">Convert Image To</h2>
+
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">JPG</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">PNG</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">GIF</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Webp</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Avif</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Tiff</div>
+        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Heif</div>
+      </div>
+    </div>
+  </div>
+</section>
