--- a/frontend/src/app/pages/edit-box/edit-box.component.html
+++ b/frontend/src/app/pages/edit-box/edit-box.component.html
@@ -1,23 +1,60 @@
 <section class="container mx-auto text-white">
-  <div class="grid grid-cols-1 md:grid-cols-5 gap-4">
+  <div class="grid grid-cols-1 md:grid-cols-5 gap-3">
     <div class="md:col-span-1">
       <img
         class="w-full object-cover rounded-lg select-none"
-        src="http://localhost:3000/api/v1/image/raw/7c4b8abf-f9e2-4ff7-b098-c75bc28f3eb3.jpg"
+        src="http://localhost:3000/api/v1/image/raw/e4b76f9c-433b-49d1-820e-09f3b0a4ae5e.jpg"
       />
     </div>
 
-    <div class="md:col-span-4 flex flex-col gap-4">
-      <h2 class="bg-gray-900 shadow-xl rounded p-4 text-white text-center">Convert Image To</h2>
+    <div class="md:col-span-4 flex flex-col gap-3">
+      <h2 class="bg-indigo-600 shadow-xl rounded p-4 text-white text-center text-xl font-bold">
+        Convert Image To
+      </h2>
 
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">JPG</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">PNG</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">GIF</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Webp</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Avif</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Tiff</div>
-        <div class="bg-gray-900 shadow-xl rounded p-4 text-white">Heif</div>
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
+        <div
+          (click)="onClickConvertToButton(conversionFormats.JPG)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          JPG
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.PNG)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          PNG
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.GIF)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          GIF
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.WEBP)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          Webp
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.AVIF)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          Avif
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.TIFF)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          Tiff
+        </div>
+        <div
+          (click)="onClickConvertToButton(conversionFormats.HEIF)"
+          class="bg-gray-900 hover:bg-gray-600 cursor-pointer shadow-xl rounded p-4 text-white"
+        >
+          Heif
+        </div>
       </div>
     </div>
   </div>
