--- a/frontend/src/app/pages/edit-page/edit-page.component.html
+++ b/frontend/src/app/pages/edit-page/edit-page.component.html
@@ -1,38 +1,12 @@
-<app-loading-spinner [center]="true" class="mx-auto" *ngIf="isLoading"></app-loading-spinner>
-
-<section *ngIf="!isLoading" class="container mx-auto text-white">
+<section class="container mx-auto text-white">
   <div class="grid grid-cols-1 md:grid-cols-5 gap-3">
     <div class="md:col-span-1">
       <img *ngIf="imageUrl" class="w-full object-cover rounded-lg select-none" [src]="imageUrl" />
+      a
     </div>
 
-    <div class="md:col-span-4 flex flex-col gap-3">
-      <h2 class="bg-indigo-800 shadow-xl rounded p-4 text-white text-center text-xl font-bold">
-        Convert Image To
-      </h2>
-
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
-        <div *ngFor="let format of formatList" (click)="toggleSelection(format)" class="w-full">
-          <div
-            [ngClass]="{
-              'bg-indigo-800': selectedFormat === format,
-              'bg-gray-800': selectedFormat !== format,
-              'hover:bg-gray-600': selectedFormat !== format,
-              'hover:bg-indigo-600': selectedFormat === format,
-              'cursor-pointer': true,
-              'shadow-xl': true,
-              rounded: true,
-              'text-white': true,
-              'w-full': true,
-              'text-center': true,
-              'p-4': true,
-              'select-none': true
-            }"
-          >
-            {{ format }}
-          </div>
-        </div>
-      </div>
+    <div class="md:col-span-4">
+      <app-image-edit-settings-form></app-image-edit-settings-form>
     </div>
   </div>
 </section>
