style of edit form

--- a/frontend/src/app/components/glob-forms/toggle-radio-grid/toggle-radio-grid.component.html
+++ b/frontend/src/app/components/glob-forms/toggle-radio-grid/toggle-radio-grid.component.html
@@ -16,7 +16,7 @@
         'select-none': true
       }"
     >
-      {{ item }}
+      <div class="flex items-center justify-center gap-2">{{ item.toUpperCase() }}</div>
     </div>
   </div>
 </div>
