--- a/frontend/src/app/components/image-edit-settings-form/image-edit-settings-form.component.html
+++ b/frontend/src/app/components/image-edit-settings-form/image-edit-settings-form.component.html
@@ -2,10 +2,12 @@
   (currentItem)="onFormatChange($event)"
 ></app-image-conversion-formpart>
 
-<button
-  type="button"
-  class="mb-3 w-full cursor-pointer inline-flex justify-center items-center px-6 py-3 bg-gray-800 text-white text-sm font-medium rounded-xl shadow-md hover:bg-gray-600 focus:outline-none"
-  (click)="onProccessImageButtonClicked()"
->
-  Proccess
-</button>
+<section class="mt-3">
+  <button
+    type="button"
+    class="w-full cursor-pointer inline-flex justify-center items-center px-6 py-3 bg-indigo-800 text-white text-sm font-medium rounded shadow-md hover:bg-indigo-600 focus:outline-none"
+    (click)="onProccessImageButtonClicked()"
+  >
+    Proccess
+  </button>
+</section>
