--- a/frontend/src/app/pages/edit-page/edit-page.component.html
+++ b/frontend/src/app/pages/edit-page/edit-page.component.html
@@ -1,8 +1,12 @@
 <section class="container mx-auto text-white">
   <div class="grid grid-cols-1 md:grid-cols-5 gap-3">
     <div class="md:col-span-1">
-      <img *ngIf="imageUrl" class="w-full object-cover rounded-lg select-none" [src]="imageUrl" />
-      a
+      <img
+        *ngIf="imageUrl"
+        class="w-full object-cover rounded-lg select-none"
+        draggable="false"
+        [src]="imageUrl"
+      />
     </div>
 
     <div class="md:col-span-4">
