--- a/frontend/src/app/components/image-edit-settings-form/image-edit-settings-form.component.html
+++ b/frontend/src/app/components/image-edit-settings-form/image-edit-settings-form.component.html
@@ -2,6 +2,8 @@
   (currentItem)="onFormatChange($event)"
 ></app-image-conversion-formpart>
 
+<app-image-resize-formpart></app-image-resize-formpart>
+
 <section class="mt-3">
   <button
     type="button"
