--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,12 +1,1 @@
-<header class="bg-gray-900 border-b-1 border-gray-800 select-none">
-  <div class="container mx-auto px-3 py-3">
-    <h1 class="text-2xl font-semibold whitespace-nowrap text-white">
-      <a
-        class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-800 to-indigo-200"
-        draggable="false"
-        routerLink="/"
-        >Image Maxxer</a
-      >
-    </h1>
-  </div>
-</header>
+<p>header works!</p>
