--- a/frontend/src/app/components/banner/banner/banner.component.html
+++ b/frontend/src/app/components/banner/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="alertCssClass" class="alert w-100 m-0">
+<div [ngClass]="[alertCssClass, mb ? 'mb-3' : '']" class="alert w-100 m-0">
   <i class="bi" [ngClass]="bsIcon"></i>
   <span *ngIf="title" class="ms-2 fw-bold">{{ title }}</span>
   <span class="ms-2" style="white-space: pre-line">{{ message }}</span>
