--- a/frontend/src/app/pages/edit-page/edit-page.component.html
+++ b/frontend/src/app/pages/edit-page/edit-page.component.html
@@ -98,14 +98,7 @@
                     <option value="vertical">Vertical</option>
                   </select>
                 </div>
-              </div>
-            </div>
-
-            <!-- Fill colour & border -->
-            <div class="bg-body-tertiary rounded-3 p-3 mb-4">
-              <h5 class="mb-3">Fill & Border</h5>
-              <div class="row g-3">
-                <div class="col-12 col-md-6">
+                <div class="col-12">
                   <label for="fillcolor" class="form-label">Fill colour</label>
                   <input
                     type="color"
@@ -114,7 +107,14 @@
                     value="#563d7c"
                   />
                 </div>
-                <div class="col-12 col-md-6">
+              </div>
+            </div>
+
+            <!-- Fill colour & border -->
+            <div class="bg-body-tertiary rounded-3 p-3 mb-4">
+              <h5 class="mb-3">Fill & Border</h5>
+              <div class="row g-3">
+                <div class="col-12">
                   <label class="form-label">Border colour</label>
                   <input
                     type="color"
